--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "scroll-into-view-if-needed": "^3.0.10",
     "svgo": "^3.0.2",
     "web-vitals": "^2.1.3",
     "yup": "^1.1.1"
